@@ -367,9 +367,7 @@ name|pq
 argument_list|,
 name|r1
 argument_list|,
-name|CompactSplitThread
-operator|.
-name|PRIORITY_USER
+literal|0
 argument_list|)
 expr_stmt|;
 name|addRegion
@@ -378,9 +376,7 @@ name|pq
 argument_list|,
 name|r2
 argument_list|,
-name|CompactSplitThread
-operator|.
-name|PRIORITY_USER
+literal|0
 argument_list|)
 expr_stmt|;
 name|addRegion
@@ -389,9 +385,7 @@ name|pq
 argument_list|,
 name|r3
 argument_list|,
-name|CompactSplitThread
-operator|.
-name|PRIORITY_USER
+literal|0
 argument_list|)
 expr_stmt|;
 name|addRegion
@@ -400,9 +394,7 @@ name|pq
 argument_list|,
 name|r4
 argument_list|,
-name|CompactSplitThread
-operator|.
-name|PRIORITY_USER
+literal|0
 argument_list|)
 expr_stmt|;
 name|addRegion
@@ -411,9 +403,7 @@ name|pq
 argument_list|,
 name|r5
 argument_list|,
-name|CompactSplitThread
-operator|.
-name|PRIORITY_USER
+literal|0
 argument_list|)
 expr_stmt|;
 name|getAndCheckRegion
@@ -459,9 +449,7 @@ name|pq
 argument_list|,
 name|r1
 argument_list|,
-name|CompactSplitThread
-operator|.
-name|PRIORITY_USER
+literal|0
 argument_list|)
 expr_stmt|;
 name|addRegion
@@ -481,9 +469,7 @@ name|pq
 argument_list|,
 name|r3
 argument_list|,
-name|CompactSplitThread
-operator|.
-name|PRIORITY_USER
+literal|0
 argument_list|)
 expr_stmt|;
 name|addRegion
@@ -503,9 +489,7 @@ name|pq
 argument_list|,
 name|r5
 argument_list|,
-name|CompactSplitThread
-operator|.
-name|PRIORITY_USER
+literal|0
 argument_list|)
 expr_stmt|;
 name|getAndCheckRegion
@@ -595,9 +579,7 @@ name|pq
 argument_list|,
 name|r5
 argument_list|,
-name|CompactSplitThread
-operator|.
-name|PRIORITY_USER
+literal|0
 argument_list|)
 expr_stmt|;
 name|getAndCheckRegion
@@ -654,9 +636,7 @@ name|pq
 argument_list|,
 name|r2
 argument_list|,
-name|CompactSplitThread
-operator|.
-name|PRIORITY_USER
+literal|0
 argument_list|)
 expr_stmt|;
 name|addRegion
@@ -694,9 +674,7 @@ name|pq
 argument_list|,
 name|r5
 argument_list|,
-name|CompactSplitThread
-operator|.
-name|PRIORITY_USER
+literal|0
 argument_list|)
 expr_stmt|;
 name|getAndCheckRegion
@@ -805,9 +783,7 @@ name|pq
 argument_list|,
 name|r3
 argument_list|,
-name|CompactSplitThread
-operator|.
-name|PRIORITY_USER
+literal|0
 argument_list|)
 expr_stmt|;
 name|getAndCheckRegion
@@ -1049,9 +1025,7 @@ name|pq
 argument_list|,
 name|r3
 argument_list|,
-name|CompactSplitThread
-operator|.
-name|PRIORITY_USER
+literal|0
 argument_list|)
 expr_stmt|;
 name|addRegion
